--- a/SCSS/components/hero/_hero.scss
+++ b/SCSS/components/hero/_hero.scss
@@ -28,7 +28,7 @@
 			top: -30rem;
 			right: 0;
 			left: auto;
-			background-image: url('../../../images/bg-tablet-pattern.svg');
+			background-image: url('../images/bg-tablet-pattern.svg');
 			background-size: cover;
 			background-repeat: no-repeat;
 			z-index: -100;
